--- a/contuct-us.html
+++ b/contuct-us.html
@@ -1,1 +1,21 @@
-<
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Link Tags</title>
+  <link href="scss/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <a href="about-us.html">Read more!</a>
+
+  <h1></h1>
+    <div class="header">text<br> text<br>text<br>
+  <p> text here</p>
+  
+  <p> text here <a href="" target="_blank">  business website</a>
+  </p>
+ 
+</body>
+
+</html>
