final for project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a href="#">Search</a>
         <a href="contuct-us.html">Contuct Us</a>
       </div>
+      <div class="container">
+        <h1><strong>Quiz Game to honor German Shepherds!</strong></h1>
+      </div>
       </div>
      </div>
   <h1>What was the name of the first ever German Shepherd actor?</h1>
@@ -64,6 +67,8 @@
   <h1><strong>A famous GDS actor who was killed in a line of duty while working for police.</strong> </h1>
              <p>Did you know that Koton (or Rondo) was a German Shepherd dog who was fatally shot while trying to apprehend a suspect in the murder of a police officer. He was also a famous actor who played in the 1989 movie K-9 with James Belushi!
             </p> 
+            <img src="media/Koton.webp" alt="Best Actor">
+
   <!---->
   <div class="modal" tabindex="-1" id="exampleModal">
     <div class="modal-dialog modal-dialog-centered">
@@ -83,7 +88,6 @@
           </div>
         </div>
         <div class="modal-footer">
-          <img src="media/LeoTeddy.JPEG" alt="Best Actor" class=".image">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button data-bs-dismiss="modal" type="button" class="btn btn-primary">Subscribe</button>
         </div>
