--- a/contuct-us.html
+++ b/contuct-us.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
+  <a class="active" href="about-us.html">Read more!</a>
   <a href="about-us.html">Read more!</a>
+
 
   <h1></h1>
     <div class="header">text<br> text<br>text<br>
