--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <a class="active" href="about-us.html">About us</a>       
   <a href="products/single-products.html">Go to products page!</a>
 
   <h1></h1>
