--- a/contuct-us.html
+++ b/contuct-us.html
@@ -9,6 +9,9 @@
 <body>
   <a class="active" href="about-us.html">Read more!</a>
   <a href="about-us.html">Read more!</a>
+  <a href="calculator.html">Calculator</a>
+  <a href="index.html">Home page</a>
+
 
 
   <h1></h1>
