--- a/calculator.html
+++ b/calculator.html
@@ -15,9 +15,9 @@
   <div class="navbar">
    <div class="container">
      <div class="center">
-      <a href="about-us.html">About us</a>
-      <a class="active" href="index.html">All Products</a>
+      <a class="active" href="about-us.html">About us</a>       
       <a href="products/single-products.html">Web Design Portfolio</a>
+      <a href="index.html">Home page</a>
       <a href="#">Blog</a>
      <a href="#">Search</a>
    </div>
