--- a/calculator.html
+++ b/calculator.html
@@ -7,25 +7,24 @@
     <title>Calculator App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/calculator.css">
+    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="scss/projects.css">
+  
   </head>
   <body>
-    <div class="wrapper">
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button">Register</button>
-     </div>
+    <header>
   <div class="navbar">
-   <div class="container">
+   <div class="dropzone-placeholder">
      <div class="center">
       <a class="active" href="about-us.html">About us</a>       
       <a href="products/single-products.html">Web Design Portfolio</a>
       <a href="index.html">Home page</a>
-      <a href="#">Blog</a>
-     <a href="#">Search</a>
    </div>
    </div>
    </div>
-   <div class="container">
-      <h1><strong>Calculator App</strong></h1>
-    <div class="container">
+  </div>
+    </header>
+   <h1><strong>Calculator App</strong></h1>
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="card">
@@ -149,10 +148,11 @@
           </div>
         </div>
       </div>
-    </div>
-   </div>
+   <div id="text"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
     <script src="javascript/calculator.js"></script>
+    <script src="javascript/funnymessages.js"></script>
+    
+  
   </body>
 </html>
