Project 15 another version

--- a/my-app/public/index1.html
+++ b/my-app/public/index1.html
@@ -21,6 +21,7 @@
           <a class="active" href="about-us.html">About us</a>       
          <a href="products/single-products.html">Web Design Portfolio</a>
          <a href="calculator.html">Calculator page</a>     
+          <a href="index.html">React Project</a>
       </div>
       <div class="container">
         <h1><strong>Quiz Game to honor German Shepherds!</strong></h1>
