--- a/my-app/about-us.html
+++ b/my-app/about-us.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-  <a class="active" href="about-us.html">About us</a>       
-  <a href="products/single-products.html">Go to products page!</a>
+  <a href="my-app/contuct-us.html">Read more!</a>
+  <a class="active" href="my-app/about-us.html">About us</a>       
+  <a href="my-app/calculator.html">Calculator page</a>     
+   <a href="my-app/index.html">React Project</a>
+   <a href="my-app/public/index.html">React Project</a>
 
   <h1></h1>
   <div id="text"></div>
