--- a/my-app/contuct-us.html
+++ b/my-app/contuct-us.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-  <a class="active" href="about-us.html">Read more!</a>
-  <a href="about-us.html">Read more!</a>
-  <a href="calculator.html">Calculator</a>
-  <a href="index.html">Home page</a>
+  <a class="active" href="my-app/about-us.html">About us</a>       
+  <a href="my-app/calculator.html">Calculator page</a>     
+   <a href="my-app/index.html">React Project</a>
+   <a href="my-app/public/index.html">React Project</a>
 
 
 
