--- a/my-app/index.html
+++ b/my-app/index.html
@@ -18,10 +18,10 @@
      <div class="navbar">
       <div class="container">
         <div class="center">
-          <a class="active" href="about-us.html">About us</a>       
-         <a href="products/single-products.html">Web Design Portfolio</a>
-         <a href="calculator.html">Calculator page</a>     
-          <a href="index.html">React Project</a>
+          <a class="active" href="my-app/about-us.html">About us</a>       
+         <a href="my-app/calculator.html">Calculator page</a>     
+          <a href="my-app/index.html">React Project</a>
+          <a href="my-app/public/index.html">React Project</a>
       </div>
       <div class="container">
         <h1><strong>Quiz Game to honor German Shepherds!</strong></h1>
