--- a/my-app/calculator.html
+++ b/my-app/calculator.html
@@ -16,10 +16,10 @@
   <div class="navbar">
    <div class="dropzone-placeholder">
      <div class="center">
-      <a class="active" href="about-us.html">About us</a>       
-      <a href="products/single-products.html">Web Design Portfolio</a>
-      <a href="index.html">Home page</a>
-   </div>
+      <a class="active" href="my-app/about-us.html">About us</a>       
+       <a href="my-app/index.html">React Project</a>
+       <a href="my-app/public/index.html">React Project</a>
+    </div>
    </div>
    </div>
   </div>
