--- a/contuct-us.html
+++ b/contuct-us.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <title>Link Tags</title>
-  <link href="scss/style.css" rel="stylesheet">
-</head>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact-Us</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="scss/calculator.css">
+    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="scss/projects.css">
+  
+  </head>
 <body>
-  <a class="active" href="my-app/about-us.html">About us</a>       
-  <a href="my-app/calculator.html">Calculator page</a>     
-   <a href="my-app/index.html">React Project</a>
-   <a href="my-app/public/index.html">React Project</a>
-
-
+  <div class="navbar">
+    <div class="container">
+      <div class="center">
+        <a class="active" href="about-us.html">About us</a>       
+       <a href="calculator.html">Calculator page</a>     
+       <a href="index.html">Contact-Us</a>
+    </div>
 
   <h1></h1>
     <div class="header">text<br> text<br>text<br>
@@ -21,6 +27,19 @@
   <p> text here <a href="" target="_blank">  business website</a>
   </p>
  
-</body>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+    <button data-bs-dismiss="modal" type="button" class="btn btn-primary">Subscribe</button>
+  </div>
+</div>
+</div>
+</div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="bootstrap.js"></script>
+<script src="javascript/scrtipt.js"></script>
+<script src="javascript/quiz.js"></script>
+
+</body>
 </html>
