--- a/about-us.html
+++ b/about-us.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-  <a href="my-app/contuct-us.html">Read more!</a>
-  <a class="active" href="my-app/about-us.html">About us</a>       
-  <a href="my-app/calculator.html">Calculator page</a>     
-   <a href="my-app/index.html">React Project</a>
-   <a href="my-app/public/index.html">React Project</a>
+  <a href="contuct-us.html">Read more!</a>
+  <a class="active" href="about-us.html">About us</a>       
+  <a href="calculator.html">Calculator page</a>     
+   <a href="index.html">Go to Home Page</a>
 
   <h1></h1>
   <div id="text"></div>
