--- a/calculator.html
+++ b/calculator.html
@@ -16,9 +16,8 @@
   <div class="navbar">
    <div class="dropzone-placeholder">
      <div class="center">
-      <a class="active" href="my-app/about-us.html">About us</a>       
-       <a href="my-app/index.html">React Project</a>
-       <a href="my-app/public/index.html">React Project</a>
+      <a class="active" href="about-us.html">About us</a>  
+       <a href="index.html">Go to Home Page</a>
     </div>
    </div>
    </div>
